--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -84,16 +84,238 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def updateAllrows(file_name):\n",
-    "    file = open('participantes/usuarios/' + file_name + '.txt')\n",
-    "    user_list = file.read().split()\n",
-    "    for user in user_list:\n",
-    "        df = pd.read_csv(f'participantes/dados/21-02-2021/{user}.csv')\n",
-    "        df = df.drop([13])\n",
-    "        df.to_csv(f'participantes/dados/21-02-2021/{user}.csv', index = False)\n",
-    "    file.close()\n",
+    "# def updateAllrows(file_name):\n",
+    "#     file = open('participantes/usuarios/' + file_name + '.txt')\n",
+    "#     user_list = file.read().split()\n",
+    "#     for user in user_list:\n",
+    "#         df = pd.read_csv(f'participantes/dados/21-02-2021/{user}.csv')\n",
+    "#         df = df.drop([13])\n",
+    "#         df.to_csv(f'participantes/dados/21-02-2021/{user}.csv', index = False)\n",
+    "#     file.close()\n",
     "    \n",
-    "updateAllrows('nomes')"
+    "# updateAllrows('nomes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "      <th>dia</th>\n",
+       "      <th>seguidores</th>\n",
+       "      <th>seguindo</th>\n",
+       "      <th>posts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-02-06</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>4629083</td>\n",
+       "      <td>1480</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-02-07</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>5213605</td>\n",
+       "      <td>1483</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-02-08</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>6139361</td>\n",
+       "      <td>1483</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-02-09</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>6466259</td>\n",
+       "      <td>1488</td>\n",
+       "      <td>206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-02-10</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>6963902</td>\n",
+       "      <td>1486</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021-02-11</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>7327856</td>\n",
+       "      <td>1491</td>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021-02-12</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>7572443</td>\n",
+       "      <td>1490</td>\n",
+       "      <td>218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2021-02-13</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>7771061</td>\n",
+       "      <td>1492</td>\n",
+       "      <td>223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021-02-14</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>7957152</td>\n",
+       "      <td>1494</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2021-02-15</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>8204246</td>\n",
+       "      <td>1495</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2021-02-16</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>8428874</td>\n",
+       "      <td>1499</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2021-02-17</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>8738898</td>\n",
+       "      <td>1499</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2021-02-18</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>8945611</td>\n",
+       "      <td>1501</td>\n",
+       "      <td>243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2021-02-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>9157418</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2021-02-20</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>9375361</td>\n",
+       "      <td>1502</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2021-02-20</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>9375361</td>\n",
+       "      <td>1502</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2021-02-21</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>9638379</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>10510823</td>\n",
+       "      <td>1510</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>10832248</td>\n",
+       "      <td>1510</td>\n",
+       "      <td>266</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          data  dia  seguidores  seguindo  posts\n",
+       "0   2021-02-06  Sab     4629083      1480    189\n",
+       "1   2021-02-07  Dom     5213605      1483    193\n",
+       "2   2021-02-08  Seg     6139361      1483    198\n",
+       "3   2021-02-09  Ter     6466259      1488    206\n",
+       "4   2021-02-10  Qua     6963902      1486    210\n",
+       "5   2021-02-11  Qui     7327856      1491    216\n",
+       "6   2021-02-12  Sex     7572443      1490    218\n",
+       "7   2021-02-13  Sab     7771061      1492    223\n",
+       "8   2021-02-14  Dom     7957152      1494    226\n",
+       "9   2021-02-15  Seg     8204246      1495    231\n",
+       "10  2021-02-16  Ter     8428874      1499    235\n",
+       "11  2021-02-17  Qua     8738898      1499    239\n",
+       "12  2021-02-18  Qui     8945611      1501    243\n",
+       "13  2021-02-19  Sex     9157418      1504    247\n",
+       "14  2021-02-20  Sab     9375361      1502    251\n",
+       "15  2021-02-20  Sab     9375361      1502    251\n",
+       "16  2021-02-21  Dom     9638379      1506    254\n",
+       "17  2021-02-23  Ter    10510823      1510    262\n",
+       "18  2021-02-24  Qua    10832248      1510    266"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('participantes/dados/total/juliette.freire.csv')"
    ]
   },
   {
