--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "    ax = plt.subplot(3, 1, 1)\n",
     "    ax.set_title(f'Análise dos seguidores de @{user}', fontsize = 18, loc = 'center')\n",
     "    \n",
+    "    sns.set_style('whitegrid')\n",
     "    g1 = sns.lineplot(x = 'data' , y = 'seguidores', data = data, linewidth = 5)\n",
     "    g1.figure.set_size_inches(15,17)\n",
     "    g1.set_xlabel('Tempo', fontsize=14)\n",
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -669,9 +670,9 @@
        "      <th>18</th>\n",
        "      <td>2021-02-24</td>\n",
        "      <td>6695.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>321425.0</td>\n",
        "      <td>5385.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>21565.0</td>\n",
        "      <td>110738.0</td>\n",
        "      <td>32911.0</td>\n",
        "      <td>78085.0</td>\n",
@@ -687,11 +688,35 @@
        "      <td>805218.0</td>\n",
        "      <td>-13871.0</td>\n",
        "      <td>35896.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>41572.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>204926.0</td>\n",
+       "      <td>6254.0</td>\n",
+       "      <td>8692.0</td>\n",
+       "      <td>68575.0</td>\n",
+       "      <td>4899.0</td>\n",
+       "      <td>57572.0</td>\n",
+       "      <td>134811.0</td>\n",
+       "      <td>142864.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35835.0</td>\n",
+       "      <td>65909.0</td>\n",
+       "      <td>10314.0</td>\n",
+       "      <td>2557.0</td>\n",
+       "      <td>144683.0</td>\n",
+       "      <td>17039.0</td>\n",
+       "      <td>284827.0</td>\n",
+       "      <td>-3050.0</td>\n",
+       "      <td>10017.0</td>\n",
+       "      <td>21137.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>18 rows × 21 columns</p>\n",
+       "<p>19 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -713,7 +738,8 @@
        "15 2021-02-21          7672.0                  0.0             917.0   \n",
        "16 2021-02-22          7789.0             263018.0          -12023.0   \n",
        "17 2021-02-23         12594.0             872444.0               0.0   \n",
-       "18 2021-02-24          6695.0                  0.0            5385.0   \n",
+       "18 2021-02-24          6695.0             321425.0            5385.0   \n",
+       "19 2021-02-25           435.0             204926.0            6254.0   \n",
        "\n",
        "    dif_afiune_caio  dif_joaolpedrosa  dif_bilaraujjo  dif_carladiaz  \\\n",
        "1           37904.0            3376.0         66276.0       219397.0   \n",
@@ -733,7 +759,8 @@
        "15              0.0           81492.0          8351.0        70282.0   \n",
        "16          28717.0          107895.0         34994.0        67475.0   \n",
        "17          57594.0           70912.0         20005.0        63663.0   \n",
-       "18              0.0          110738.0         32911.0        78085.0   \n",
+       "18          21565.0          110738.0         32911.0        78085.0   \n",
+       "19           8692.0           68575.0          4899.0        57572.0   \n",
        "\n",
        "    dif_karolconka  dif_camilladelucas  ...  dif_negodioficial  \\\n",
        "1         -18687.0              1019.0  ...           -21360.0   \n",
@@ -754,6 +781,7 @@
        "16          7640.0            300334.0  ...            -4853.0   \n",
        "17         16204.0                 0.0  ...            46527.0   \n",
        "18        135529.0            381786.0  ...            24592.0   \n",
+       "19        134811.0            142864.0  ...            35835.0   \n",
        "\n",
        "    dif_lucaskokapenteado  dif_irodolffo  dif_lumena.aleluia  \\\n",
        "1               3965212.0        18724.0             -3145.0   \n",
@@ -774,6 +802,7 @@
        "16                79884.0        19118.0              -300.0   \n",
        "17                83520.0        16469.0               709.0   \n",
        "18               144987.0        14867.0               744.0   \n",
+       "19                65909.0        10314.0              2557.0   \n",
        "\n",
        "    dif_gilnogueiraofc  dif_viihtube  dif_sarah_andrade  dif_projota  \\\n",
        "1             256667.0       -6860.0           303329.0     -78285.0   \n",
@@ -794,6 +823,7 @@
        "16            199065.0       25844.0           256352.0     -13343.0   \n",
        "17            295361.0       27934.0                0.0          0.0   \n",
        "18            160631.0       28082.0           805218.0     -13871.0   \n",
+       "19            144683.0       17039.0           284827.0      -3050.0   \n",
        "\n",
        "    dif_fiuk  dif_thaisfbraz  \n",
        "1   -15217.0         43591.0  \n",
@@ -813,12 +843,13 @@
        "15   39696.0             0.0  \n",
        "16   47922.0         44888.0  \n",
        "17   41104.0         57928.0  \n",
-       "18   35896.0             0.0  \n",
+       "18   35896.0         41572.0  \n",
+       "19   10017.0         21137.0  \n",
        "\n",
-       "[18 rows x 21 columns]"
+       "[19 rows x 21 columns]"
       ]
      },
-     "execution_count": 618,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
