--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -132,155 +132,235 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-02-06</td>\n",
-       "      <td>Sab</td>\n",
-       "      <td>4629083</td>\n",
-       "      <td>1480</td>\n",
-       "      <td>189</td>\n",
+       "      <td>2021-02-04</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>1829935</td>\n",
+       "      <td>1155</td>\n",
+       "      <td>134</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-02-07</td>\n",
-       "      <td>Dom</td>\n",
-       "      <td>5213605</td>\n",
-       "      <td>1483</td>\n",
-       "      <td>193</td>\n",
+       "      <td>2021-02-06</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>2133264</td>\n",
+       "      <td>1160</td>\n",
+       "      <td>141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-02-08</td>\n",
-       "      <td>Seg</td>\n",
-       "      <td>6139361</td>\n",
-       "      <td>1483</td>\n",
-       "      <td>198</td>\n",
+       "      <td>2021-02-07</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>2568813</td>\n",
+       "      <td>1162</td>\n",
+       "      <td>145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-02-09</td>\n",
-       "      <td>Ter</td>\n",
-       "      <td>6466259</td>\n",
-       "      <td>1488</td>\n",
-       "      <td>206</td>\n",
+       "      <td>2021-02-08</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>3305770</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-02-10</td>\n",
-       "      <td>Qua</td>\n",
-       "      <td>6963902</td>\n",
-       "      <td>1486</td>\n",
-       "      <td>210</td>\n",
+       "      <td>2021-02-09</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>3799904</td>\n",
+       "      <td>1174</td>\n",
+       "      <td>157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2021-02-11</td>\n",
-       "      <td>Qui</td>\n",
-       "      <td>7327856</td>\n",
-       "      <td>1491</td>\n",
-       "      <td>216</td>\n",
+       "      <td>2021-02-10</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>4312582</td>\n",
+       "      <td>1176</td>\n",
+       "      <td>163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2021-02-12</td>\n",
-       "      <td>Sex</td>\n",
-       "      <td>7572443</td>\n",
-       "      <td>1490</td>\n",
-       "      <td>218</td>\n",
+       "      <td>2021-02-11</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>4563719</td>\n",
+       "      <td>1178</td>\n",
+       "      <td>166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2021-02-13</td>\n",
-       "      <td>Sab</td>\n",
-       "      <td>7771061</td>\n",
-       "      <td>1492</td>\n",
-       "      <td>223</td>\n",
+       "      <td>2021-02-12</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>4761916</td>\n",
+       "      <td>1180</td>\n",
+       "      <td>169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2021-02-14</td>\n",
-       "      <td>Dom</td>\n",
-       "      <td>7957152</td>\n",
-       "      <td>1494</td>\n",
-       "      <td>226</td>\n",
+       "      <td>2021-02-13</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>4943878</td>\n",
+       "      <td>1189</td>\n",
+       "      <td>172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2021-02-15</td>\n",
-       "      <td>Seg</td>\n",
-       "      <td>8204246</td>\n",
-       "      <td>1495</td>\n",
-       "      <td>231</td>\n",
+       "      <td>2021-02-14</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>5154671</td>\n",
+       "      <td>1191</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2021-02-16</td>\n",
-       "      <td>Ter</td>\n",
-       "      <td>8428874</td>\n",
-       "      <td>1499</td>\n",
-       "      <td>235</td>\n",
+       "      <td>2021-02-15</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>5429713</td>\n",
+       "      <td>1192</td>\n",
+       "      <td>183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2021-02-17</td>\n",
-       "      <td>Qua</td>\n",
-       "      <td>8738898</td>\n",
-       "      <td>1499</td>\n",
-       "      <td>239</td>\n",
+       "      <td>2021-02-16</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>5768433</td>\n",
+       "      <td>1192</td>\n",
+       "      <td>184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2021-02-18</td>\n",
-       "      <td>Qui</td>\n",
-       "      <td>8945611</td>\n",
-       "      <td>1501</td>\n",
-       "      <td>243</td>\n",
+       "      <td>2021-02-17</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>6203691</td>\n",
+       "      <td>1199</td>\n",
+       "      <td>186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2021-02-19</td>\n",
-       "      <td>Sex</td>\n",
-       "      <td>9157418</td>\n",
-       "      <td>1504</td>\n",
-       "      <td>247</td>\n",
+       "      <td>2021-02-18</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>6402923</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2021-02-20</td>\n",
-       "      <td>Sab</td>\n",
-       "      <td>9375361</td>\n",
-       "      <td>1502</td>\n",
-       "      <td>251</td>\n",
+       "      <td>2021-02-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>6706445</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2021-02-20</td>\n",
        "      <td>Sab</td>\n",
-       "      <td>9375361</td>\n",
-       "      <td>1502</td>\n",
-       "      <td>251</td>\n",
+       "      <td>6885529</td>\n",
+       "      <td>1199</td>\n",
+       "      <td>193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2021-02-21</td>\n",
        "      <td>Dom</td>\n",
-       "      <td>9638379</td>\n",
-       "      <td>1506</td>\n",
-       "      <td>254</td>\n",
+       "      <td>7141881</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2021-02-23</td>\n",
-       "      <td>Ter</td>\n",
-       "      <td>10510823</td>\n",
-       "      <td>1510</td>\n",
-       "      <td>262</td>\n",
+       "      <td>2021-02-21</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>7141881</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>7947099</td>\n",
+       "      <td>1215</td>\n",
+       "      <td>208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
        "      <td>2021-02-24</td>\n",
        "      <td>Qua</td>\n",
-       "      <td>10832248</td>\n",
-       "      <td>1510</td>\n",
-       "      <td>266</td>\n",
+       "      <td>8231926</td>\n",
+       "      <td>1215</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>8398383</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>8519673</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2021-02-27</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>8631961</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2021-02-28</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>8740530</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>8855752</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2021-03-03</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>8869819</td>\n",
+       "      <td>1219</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2021-03-03</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>8869819</td>\n",
+       "      <td>1219</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2021-03-05</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>8926719</td>\n",
+       "      <td>1223</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2021-03-06</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>8766250</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>227</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -288,34 +368,44 @@
       ],
       "text/plain": [
        "          data  dia  seguidores  seguindo  posts\n",
-       "0   2021-02-06  Sab     4629083      1480    189\n",
-       "1   2021-02-07  Dom     5213605      1483    193\n",
-       "2   2021-02-08  Seg     6139361      1483    198\n",
-       "3   2021-02-09  Ter     6466259      1488    206\n",
-       "4   2021-02-10  Qua     6963902      1486    210\n",
-       "5   2021-02-11  Qui     7327856      1491    216\n",
-       "6   2021-02-12  Sex     7572443      1490    218\n",
-       "7   2021-02-13  Sab     7771061      1492    223\n",
-       "8   2021-02-14  Dom     7957152      1494    226\n",
-       "9   2021-02-15  Seg     8204246      1495    231\n",
-       "10  2021-02-16  Ter     8428874      1499    235\n",
-       "11  2021-02-17  Qua     8738898      1499    239\n",
-       "12  2021-02-18  Qui     8945611      1501    243\n",
-       "13  2021-02-19  Sex     9157418      1504    247\n",
-       "14  2021-02-20  Sab     9375361      1502    251\n",
-       "15  2021-02-20  Sab     9375361      1502    251\n",
-       "16  2021-02-21  Dom     9638379      1506    254\n",
-       "17  2021-02-23  Ter    10510823      1510    262\n",
-       "18  2021-02-24  Qua    10832248      1510    266"
+       "0   2021-02-04  Qui     1829935      1155    134\n",
+       "1   2021-02-06  Sab     2133264      1160    141\n",
+       "2   2021-02-07  Dom     2568813      1162    145\n",
+       "3   2021-02-08  Seg     3305770      1171    151\n",
+       "4   2021-02-09  Ter     3799904      1174    157\n",
+       "5   2021-02-10  Qua     4312582      1176    163\n",
+       "6   2021-02-11  Qui     4563719      1178    166\n",
+       "7   2021-02-12  Sex     4761916      1180    169\n",
+       "8   2021-02-13  Sab     4943878      1189    172\n",
+       "9   2021-02-14  Dom     5154671      1191    175\n",
+       "10  2021-02-15  Seg     5429713      1192    183\n",
+       "11  2021-02-16  Ter     5768433      1192    184\n",
+       "12  2021-02-17  Qua     6203691      1199    186\n",
+       "13  2021-02-18  Qui     6402923      1202    188\n",
+       "14  2021-02-19  Sex     6706445      1200    192\n",
+       "15  2021-02-20  Sab     6885529      1199    193\n",
+       "16  2021-02-21  Dom     7141881      1202    197\n",
+       "17  2021-02-21  Dom     7141881      1202    197\n",
+       "18  2021-02-23  Ter     7947099      1215    208\n",
+       "19  2021-02-24  Qua     8231926      1215    210\n",
+       "20  2021-02-25  Qui     8398383      1216    211\n",
+       "21  2021-02-26  Sex     8519673      1216    213\n",
+       "22  2021-02-27  Sab     8631961      1216    215\n",
+       "23  2021-02-28  Dom     8740530      1216    217\n",
+       "24  2021-03-01  Seg     8855752      1216    220\n",
+       "25  2021-03-03  Qua     8869819      1219    220\n",
+       "26  2021-03-03  Qua     8869819      1219    220\n",
+       "27  2021-03-05  Sex     8926719      1223    225\n",
+       "28  2021-03-06  Sab     8766250      1222    227"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('participantes/dados/total/juliette.freire.csv')"
+    "pd.read_csv('participantes/dados/total/sarah_andrade.csv')"
    ]
   },
   {
