--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +362,70 @@
        "      <td>1222</td>\n",
        "      <td>227</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2021-03-06</td>\n",
+       "      <td>Sab</td>\n",
+       "      <td>8766250</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2021-03-08</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>8664033</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2021-03-08</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>8664033</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2021-03-10</td>\n",
+       "      <td>Qua</td>\n",
+       "      <td>8403913</td>\n",
+       "      <td>1221</td>\n",
+       "      <td>236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2021-03-11</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>8021488</td>\n",
+       "      <td>1224</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2021-03-11</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>8021488</td>\n",
+       "      <td>1224</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2021-03-11</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>8021488</td>\n",
+       "      <td>1224</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2021-03-14</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>7854001</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -396,10 +460,18 @@
        "25  2021-03-03  Qua     8869819      1219    220\n",
        "26  2021-03-03  Qua     8869819      1219    220\n",
        "27  2021-03-05  Sex     8926719      1223    225\n",
-       "28  2021-03-06  Sab     8766250      1222    227"
+       "28  2021-03-06  Sab     8766250      1222    227\n",
+       "29  2021-03-06  Sab     8766250      1222    227\n",
+       "30  2021-03-08  Seg     8664033      1218    231\n",
+       "31  2021-03-08  Seg     8664033      1218    231\n",
+       "32  2021-03-10  Qua     8403913      1221    236\n",
+       "33  2021-03-11  Qui     8021488      1224    239\n",
+       "34  2021-03-11  Qui     8021488      1224    239\n",
+       "35  2021-03-11  Qui     8021488      1224    239\n",
+       "36  2021-03-14  Dom     7854001      1227    248"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
