--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +426,14 @@
        "      <td>1227</td>\n",
        "      <td>248</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>7871979</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -468,10 +476,11 @@
        "33  2021-03-11  Qui     8021488      1224    239\n",
        "34  2021-03-11  Qui     8021488      1224    239\n",
        "35  2021-03-11  Qui     8021488      1224    239\n",
-       "36  2021-03-14  Dom     7854001      1227    248"
+       "36  2021-03-14  Dom     7854001      1227    248\n",
+       "37  2021-03-15  Seg     7871979      1227    251"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
