--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +434,30 @@
        "      <td>1227</td>\n",
        "      <td>251</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>7871979</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>Seg</td>\n",
+       "      <td>7871979</td>\n",
+       "      <td>1227</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>2021-03-18</td>\n",
+       "      <td>Qui</td>\n",
+       "      <td>7883704</td>\n",
+       "      <td>1229</td>\n",
+       "      <td>259</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -477,10 +501,13 @@
        "34  2021-03-11  Qui     8021488      1224    239\n",
        "35  2021-03-11  Qui     8021488      1224    239\n",
        "36  2021-03-14  Dom     7854001      1227    248\n",
-       "37  2021-03-15  Seg     7871979      1227    251"
+       "37  2021-03-15  Seg     7871979      1227    251\n",
+       "38  2021-03-15  Seg     7871979      1227    251\n",
+       "39  2021-03-15  Seg     7871979      1227    251\n",
+       "40  2021-03-18  Qui     7883704      1229    259"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
