--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -458,6 +458,14 @@
        "      <td>1229</td>\n",
        "      <td>259</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>2021-03-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>7864335</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -504,10 +512,11 @@
        "37  2021-03-15  Seg     7871979      1227    251\n",
        "38  2021-03-15  Seg     7871979      1227    251\n",
        "39  2021-03-15  Seg     7871979      1227    251\n",
-       "40  2021-03-18  Qui     7883704      1229    259"
+       "40  2021-03-18  Qui     7883704      1229    259\n",
+       "41  2021-03-19  Sex     7864335      1228    262"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
