--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +466,38 @@
        "      <td>1228</td>\n",
        "      <td>262</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2021-03-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>7864335</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>2021-03-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>7864335</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>2021-03-19</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>7864335</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>2021-03-23</td>\n",
+       "      <td>Ter</td>\n",
+       "      <td>7614073</td>\n",
+       "      <td>1226</td>\n",
+       "      <td>273</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -513,10 +545,14 @@
        "38  2021-03-15  Seg     7871979      1227    251\n",
        "39  2021-03-15  Seg     7871979      1227    251\n",
        "40  2021-03-18  Qui     7883704      1229    259\n",
-       "41  2021-03-19  Sex     7864335      1228    262"
+       "41  2021-03-19  Sex     7864335      1228    262\n",
+       "42  2021-03-19  Sex     7864335      1228    262\n",
+       "43  2021-03-19  Sex     7864335      1228    262\n",
+       "44  2021-03-19  Sex     7864335      1228    262\n",
+       "45  2021-03-23  Ter     7614073      1226    273"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
