--- a/scrap_data_instagram.ipynb
+++ b/scrap_data_instagram.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados já coletados hoje!\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "from urllib.request import Request, urlopen\n",
